--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 
 
 body {
-    background-image: url(assets/images/welbeing\ background\ .jpeg);
+    background-image: url(/assets/images/welbeing\ background\ .jpeg);
     background-size: cover; /* Ensures the image covers the entire background */
     background-repeat: no-repeat; /* Prevents the image from repeating */
     background-position: center; /* Centers the image */
